# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")

config("offline_audio_effect_config") {
  include_dirs = [
    "include",
    "../../../interfaces/inner_api/native/offlineaudioeffect/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]
}

ohos_shared_library("offline_audio_effect") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }
  install_enable = true

  sources = [
    "src/offline_audio_effect_chain_impl.cpp",
    "src/offline_audio_effect_manager.cpp",
    "src/offline_audio_effect_server_chain.cpp",
  ]

  deps = [
    "../../../services/audio_service:audio_client",
    "../audioutils:audio_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_audio:libeffect_proxy_1.0",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  public_configs = [ ":offline_audio_effect_config" ]

  version_script = "../../../audio_framework.versionscript"
  innerapi_tags = [ "platformsdk" ]

  part_name = "audio_framework"
  subsystem_name = "multimedia"
}
