# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../config.gni")

config("audio_config") {
  include_dirs = [
    "../audioutils/include/",
    "../../../interfaces/inner_api/native/audiocommon/include",
    "../../../interfaces/inner_api/native/audiosuite/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
  ]
}

ohos_shared_library("ohaudiosuite") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
  }
  include_dirs = [
    "../../../interfaces/kits/c/",
    "../../../interfaces/kits/c/common/",
    "../../../interfaces/kits/c/audio_suite/",
  ]

  configs = [ ":audio_config" ]

  if (audio_framework_feature_audiosuite_support) {
    sources = [
      "./OHAudioSuiteEngine.cpp",
      "./OHAudioSuiteNodeBuilder.cpp",
      "../../../services\audio_suite\client\config\src\audio_suite_capabilities_parser.cpp",
      "../../../services\audio_suite\client\config\src\audio_suite_capabilities.cpp",
    ]

  deps = [
    "../../../services/audio_suite:audio_suite",
    "../../../frameworks/native/audioutils:audio_xml_utils",
    "../audioutils:audio_utils",
  ]
  cflags = [ "-Werror" ]

    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  }

  innerapi_tags = [ "ndk" ]

  output_name = "ohaudiosuite"
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "audio_framework"
}
